--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -354,7 +354,7 @@ h6 {
 .profile-img {
   width: 100%;
   height: 260px;
-  background-image: url(../img/profile-img/1.jpg);
+  background-image: url(../img/profile-img/profile.jpg);
   background-position: center;
   background-size: cover;
 }
